--- a/api-reference/mocking-api/mock-methods.mdx
+++ b/api-reference/mocking-api/mock-methods.mdx
@@ -1,306 +1,267 @@
 ---
-title: "Mock Methods & Macros"
-description: "Documents macros and templates for defining mock methods within test doubles, including usage of MOCK_METHOD, signature specification, and limitations."
+title: "Mocking Methods and Classes"
+description: "Explains how to declare and implement mock classes and methods using core GoogleMock macros, including support for C++ features like const correctness, overrides, and noexcept. Highlights best practices for mock class design."
 ---
 
-# Mock Methods & Macros
+# Mocking Methods and Classes
 
-This section documents the macros and templates used for defining mock methods inside test double classes in GoogleMock. Mock methods allow you to create flexible and verifiable stand-ins for real class methods in C++ tests, greatly simplifying writing interaction-based tests by describing expected calls, arguments, and return behaviors.
+This document explains how to declare and implement mock classes and their methods using GoogleMock macros. It covers the usage of the core `MOCK_METHOD` macro, including how to handle C++ features such as const correctness, overrides, noexcept, calling conventions, and reference qualifiers. It also highlights best practices in mock class design, with examples demonstrating common scenarios.
 
 ---
 
 ## Overview
 
-GoogleMock provides the `MOCK_METHOD` macro to define mock methods within mock classes. These macros generate method declarations and definitions that seamlessly integrate with GoogleMock's expectations and actions system.
+GoogleMock enables writing mock classes that simulate behavior of real classes for testing purposes. The cornerstone for mocking is the declaration of mock methods within mock classes using the `MOCK_METHOD` macro, which allows specification of the method signature and optional qualifiers matching the method being mocked.
 
-Mock methods behave like virtual methods and must override the corresponding method in the base class (which should be virtual). Mock objects provide control over the behavior of these methods during test execution.
+By accurately defining mock methods, you can set expectations on how these methods will be called, customize their behavior, and verify interactions during tests.
 
-### Why Use Mock Methods?
+---
 
-- They allow verification of function calls by specifying:
-  - Which methods are called,
-  - With what arguments,
-  - How many times,
-  - The order in which calls happen,
-  - What the methods return.
+## Defining Mock Methods with `MOCK_METHOD`
 
-- Automate tedious mock implementations while providing clear syntax.
-
-- Support overloads, const methods, templates, and different calling conventions.
-
-
-## MOCK_METHOD Macro
-
-The `MOCK_METHOD` macro is the primary utility to declare mock methods. Its fundamental syntax is:
+### Syntax
 
 ```cpp
-MOCK_METHOD(return_type, method_name, (args...), (specifiers));
+MOCK_METHOD(ReturnType, MethodName, (ArgTypes...), (Specs...));
 ```
 
-- `return_type`: The method's return type.
-- `method_name`: Name of the method to mock.
-- `args...`: Method argument types and names enclosed in parentheses.
-- `specifiers`: Optional method qualifiers such as `const`, `override`, `noexcept`, or calling conventions.
-
-### Example
-
-Given a base class:
-
-```cpp
-class Turtle {
- public:
-  virtual ~Turtle() {}
-  virtual void PenUp() = 0;
-  virtual void PenDown() = 0;
-  virtual void Forward(int distance) = 0;
-  virtual int GetX() const = 0;
-};
-```
-
-You define a mock class as:
-
-```cpp
-#include <gmock/gmock.h>
-
-class MockTurtle : public Turtle {
- public:
-  MOCK_METHOD(void, PenUp, (), (override));
-  MOCK_METHOD(void, PenDown, (), (override));
-  MOCK_METHOD(void, Forward, (int distance), (override));
-  MOCK_METHOD(int, GetX, (), (const, override));
-};
-```
-
-No additional method implementations are necessary. The macro expands to both declaration and necessary internal plumbing.
-
-
-## Specifiers
-
-The fourth optional argument to `MOCK_METHOD` controls method qualifiers:
-
-| Specifier         | Description                                 |
-|-------------------|---------------------------------------------|
-| `const`           | Marks the mocked method as `const`. Required when overriding `const` methods.                |
-| `override`        | Marks the method as `override`. Recommended for virtual functions.                           |
-| `noexcept`        | Marks the method as `noexcept`. Required when overriding `noexcept` methods.                |
-| `Calltype(...)`   | Specifies the calling convention (e.g., `STDMETHODCALLTYPE`). Useful on Windows.             |
-| `ref(&)` or `ref(&&)`  | Specifies reference qualifiers if the method is restricted (e.g., lvalue or rvalue refs). |
-
-
-## Handling Commas in Return Types and Arguments
-
-Because C++ template and macro parsing can be sensitive to commas, especially in template types e.g., `std::pair<int, double>`, enclosing such types in parentheses is required:
-
-```cpp
-MOCK_METHOD((std::pair<bool, int>), GetPair, ());
-MOCK_METHOD(bool, CheckMap, ((std::map<int, double>), bool));
-```
-
-Alternatively, use `using` to create type aliases:
-
-```cpp
-using BoolIntPair = std::pair<bool, int>;
-MOCK_METHOD(BoolIntPair, GetPair, ());
-```
-
-
-## Mocking Overloaded Methods
-
-Overloaded methods can be mocked as usual. The signatures must clearly identify the overload being mocked:
-
-```cpp
-class Foo {
- public:
-  virtual ~Foo();
-  virtual int Add(int x);
-  virtual int Add(int times, int x);
-  virtual int& GetBar();
-  virtual const int& GetBar() const;
-};
-
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(int, Add, (int x), (override));
-  MOCK_METHOD(int, Add, (int times, int x), (override));
-  MOCK_METHOD(int&, GetBar, (), (override));
-  MOCK_METHOD(const int&, GetBar, (), (const, override));
-};
-```
-
-To avoid compiler warnings about hidden overloads, use `using` declarations:
-
-```cpp
-class MockFoo : public Foo {
- public:
-  using Foo::Add;  // Bring all Add overloads from base class into scope
-  MOCK_METHOD(int, Add, (int x), (override));
-  // No need to mock every overload if not desired
-};
-```
-
-
-## Declaring Mock Methods for Templates and Class Templates
-
-You can mock methods inside templates or mock class templates just like any other method.
-
-Example for a class template:
-
-```cpp
-template <typename Elem>
-class StackInterface {
- public:
-  virtual ~StackInterface();
-  virtual int GetSize() const = 0;
-  virtual void Push(const Elem& x) = 0;
-};
-
-template <typename Elem>
-class MockStack : public StackInterface<Elem> {
- public:
-  MOCK_METHOD(int, GetSize, (), (const, override));
-  MOCK_METHOD(void, Push, (const Elem& x), (override));
-};
-```
-
-
-## Mocking Non-Virtual Methods
-
-gMock can mock non-virtual methods using templates for high-performance dependency injection.
-
-In this case, the mock class and the real class do not share a base. They only have methods with the same signature.
+- **ReturnType**: The return type of the mocked method.
+- **MethodName**: The name of the method to mock.
+- **ArgTypes...**: The types of the method’s parameters, enclosed in parentheses.
+- **Specs...** *(optional)*: A comma-separated list of qualifiers such as `const`, `override`, `noexcept`, `Calltype(...)`, and `ref(...)` to match the method's declaration.
 
 Example:
 
 ```cpp
-class ConcretePacketStream {
+class MockFoo {
  public:
-  void AppendPacket(Packet* new_packet);
-  const Packet* GetPacket(size_t packet_number) const;
-  size_t NumberOfPackets() const;
-};
-
-class MockPacketStream {
- public:
-  MOCK_METHOD(const Packet*, GetPacket, (size_t packet_number), (const));
-  MOCK_METHOD(size_t, NumberOfPackets, (), (const));
+  MOCK_METHOD(int, GetSize, (), (const, override));
+  MOCK_METHOD(void, Foo, (int x, double y), (noexcept, override));
 };
 ```
 
-The code under test can be written as a template to accept either type.
+### Handling Commas in Types
 
+Some complex types such as templates with multiple arguments contain commas which confuse the macro parser. To fix this:
 
-## Mocking Free Functions
+- Wrap the entire type in an extra pair of parentheses, e.g.:
+  ```cpp
+  MOCK_METHOD((std::pair<bool, int>), GetPair, ());
+  MOCK_METHOD(bool, CheckMap, ((std::map<int, double>), bool));
+  ```
 
-You cannot directly mock free or static functions. Instead, rewrite code to depend on interfaces or use `MockFunction` with `std::function` where you want to test callbacks.
-
-For example:
+- Or use type aliases:
 
 ```cpp
-class FileInterface {
- public:
-  virtual bool Open(const char* path, const char* mode) = 0;
-};
-
-class File : public FileInterface {
- public:
-  bool Open(const char* path, const char* mode) override {
-    return ::OpenFile(path, mode);
-  }
-};
+using BoolAndInt = std::pair<bool, int>;
+MOCK_METHOD(BoolAndInt, GetPair, ());
 ```
 
-This allows easy mocking of `FileInterface`.
+### Important Notes
 
-
-## Special Mock Classes
-
-### MockFunction
-
-You can mock standalone function types (such as `std::function`) using `MockFunction<F>`, which mocks a single method named `Call` matching `F`.
-
-Example usage:
-
-```cpp
-MockFunction<int(std::string)> mock_function;
-EXPECT_CALL(mock_function, Call("bar")).WillOnce(Return(1));
-std::function<int(std::string)> f = mock_function.AsStdFunction();
-EXPECT_EQ(f("bar"), 1);
-```
-
-
-## Best Practices
-
-- Use `MOCK_METHOD` in the **public** section of your mock class regardless of the base method's access modifier. This is required to correctly set expectations.
-- Use `override` where possible to ensure correct overriding.
-- Wrap complex argument or return types containing commas with parentheses or use type aliases to avoid macro parsing issues.
-- For overloaded methods, mock every version you expect to call and consider `using` declarations to pull base class overloads into scope.
-- For non-virtual methods, use templated mock classes with matching method signatures.
-- Avoid mocking free functions directly; refactor into interfaces or use `MockFunction` with callback function wrappers.
-
-
-## Troubleshooting
-
-- Compilation errors related to `MOCK_METHOD` are often due to commas in types not being enclosed in parentheses.
-- Ambiguities with overloaded methods can be resolved by specifying full signatures or using `Const()` wrapper to disambiguate const overloads.
-- Be careful using `MOCK_METHOD` with incomplete types; ensure `PrintTo()` is defined for such types.
-- Always create mock expectations **before** exercising your code to avoid undefined behaviors.
-
-
-## Related Macros & Tools
-
-- `ON_CALL(...)`: For specifying default behaviors without expectation constraints.
-- `EXPECT_CALL(...)`: For specifying expectations on method calls.
-- `NiceMock`, `NaggyMock`, `StrictMock`: Wrappers that control how uninteresting calls are treated.
-- `Return()`, `WillOnce()`, `WillRepeatedly()`: Clauses for specifying mock method behaviors.
-
-
-## Example: Full Mock Class
-
-```cpp
-#include <gmock/gmock.h>
-
-class MockTurtle : public Turtle {
- public:
-  MOCK_METHOD(void, PenUp, (), (override));
-  MOCK_METHOD(void, PenDown, (), (override));
-  MOCK_METHOD(void, Forward, (int distance), (override));
-  MOCK_METHOD(int, GetX, (), (const, override));
-};
-
-// Usage in a test
-TEST(PainterTest, CallsPenDown) {
-  MockTurtle turtle;
-  EXPECT_CALL(turtle, PenDown()).Times(AtLeast(1));
-  Painter painter(&turtle);
-  painter.DrawCircle(0, 0, 10);
-}
-```
-
-This test uses the mock to verify interactions.
-
+- Declare mock methods **public** in your mock class, even if the base class method is protected or private. This enables `ON_CALL` and `EXPECT_CALL` to work.
+- The mock method signature must match the original method, including qualifiers like `const` and `override`.
 
 ---
 
-## Diagram: Position of MOCK_METHOD in Mocking Workflow
+## Qualifiers Supported by `MOCK_METHOD`
 
-```mermaid
-flowchart TD
-  A[Define Interface with virtual methods] --> B[Create Mock Class inheriting interface]
-  B --> C[Define MOCK_METHOD for each virtual method]
-  C --> D[Write tests]
-  D --> E[Set EXPECT_CALL and ON_CALL on mock methods]
-  E --> F[Run test exercising the code under test]
-  F --> G[GoogleMock verifies expectations]
+The following qualifiers can be applied in the optional `Specs...` parameter:
+
+| Qualifier           | Description                                                         |
+|---------------------|---------------------------------------------------------------------|
+| `const`             | Marks the mock method as `const`. Required if mocking a `const` method. |
+| `override`          | Marks the method with `override`. Recommended if overriding a virtual method. |
+| `noexcept`          | Marks the method with `noexcept`. Required if overriding a `noexcept` method. |
+| `Calltype(...)`     | Specifies the calling convention, e.g., `Calltype(STDMETHODCALLTYPE)` on Windows. |
+| `ref(&)` or `ref(&&)` | Specifies reference qualifiers, required if overriding methods with reference qualifiers. |
+
+Example:
+
+```cpp
+MOCK_METHOD(bool, Process, (const Data& data), (const, override));
+MOCK_METHOD(void, Foo, (), (noexcept, override));
+MOCK_METHOD(int, Bar, (int), (Calltype(STDMETHODCALLTYPE)));
+``` 
+
+---
+
+## Using `EXPECT_CALL` and `ON_CALL` with Mock Methods
+
+Once mock methods are declared, you use:
+
+- `EXPECT_CALL(mock_object, Method(arguments))` to set expected calls with behavior and cardinality.
+- `ON_CALL(mock_object, Method(arguments))` to set default behaviors without imposing call expectations.
+
+Example:
+
+```cpp
+MockFoo mock;
+ON_CALL(mock, GetSize()).WillByDefault(Return(42));
+EXPECT_CALL(mock, GetSize()).Times(2).WillRepeatedly(Return(17));
+
+int size = mock.GetSize();  // returns 17
 ```
 
 ---
 
-## Further Reading & References
+## Best Practices for Mock Class Design
 
-- [GoogleMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) – beginner-friendly introduction including mock creation and usage.
-- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html) – detailed guide on mocking-related features.
-- [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html) – quick syntax reference.
-- [Mocking with GoogleMock Guide](https://google.github.io/googletest/guides/core-workflows/mocking-with-gmock.html) – end-to-end testing workflows.
-- [GoogleMock Spec Builders header](googlemock/include/gmock/gmock-spec-builders.h) for implementation insights.
+- **Match original method signatures and qualifiers exactly** to ensure compatibility.
+- Declare all mock methods in the `public` section.
+- Avoid mocking non-virtual methods unless applying high-performance dependency injection techniques.
+- Wrap complex return and argument types with parentheses or use type aliases.
+- Use `override` and `noexcept` qualifiers where appropriate for clarity and correctness.
+- For overloaded methods, mock each overload explicitly, using `Const()` to disambiguate const overloads if needed.
 
 ---
+
+## Common Scenarios and Examples
+
+### Mocking a Simple Virtual Class
+
+```cpp
+class Foo {
+ public:
+  virtual ~Foo() {}
+  virtual int GetValue() const = 0;
+  virtual void SetValue(int value) = 0;
+};
+
+class MockFoo : public Foo {
+ public:
+  MOCK_METHOD(int, GetValue, (), (const, override));
+  MOCK_METHOD(void, SetValue, (int value), (override));
+};
+```
+
+### Mocking an Overloaded Method
+
+```cpp
+class Bar {
+ public:
+  virtual ~Bar() {}
+  virtual int Calculate(int a) = 0;
+  virtual int Calculate(double a) = 0;
+};
+
+class MockBar : public Bar {
+ public:
+  MOCK_METHOD(int, Calculate, (int a), (override));
+  MOCK_METHOD(int, Calculate, (double a), (override));
+};
+
+// Usage:
+MockBar mock;
+EXPECT_CALL(mock, Calculate(5));       // Calls int version
+EXPECT_CALL(mock, Calculate(3.14));    // Calls double version
+```
+
+### Mocking Const Overloads
+
+```cpp
+class Baz {
+ public:
+  virtual int Foo() = 0;
+  virtual int Foo() const = 0;
+};
+
+class MockBaz : public Baz {
+ public:
+  MOCK_METHOD(int, Foo, (), (override));
+  MOCK_METHOD(int, Foo, (), (const, override));
+};
+
+// Disambiguation of const calls
+const MockBaz const_mock;
+EXPECT_CALL(Const(mock), Foo()).WillOnce(Return(1));
+EXPECT_CALL(mock, Foo()).WillOnce(Return(2));
+```
+
+### Overriding Methods with Reference Qualifiers
+
+```cpp
+class Qux {
+ public:
+  virtual int Get() & = 0;
+  virtual int Get() && = 0;
+};
+
+class MockQux : public Qux {
+ public:
+  MOCK_METHOD(int, Get, (), (ref(&), override));
+  MOCK_METHOD(int, Get, (), (ref(&&), override));
+};
+```
+
+---
+
+## Handling Move-only Types
+
+GoogleMock supports mocking methods accepting or returning move-only types (e.g., `std::unique_ptr<T>`). You can declare these mock methods as usual:
+
+```cpp
+MOCK_METHOD(std::unique_ptr<Foo>, CreateFoo, (), (override));
+MOCK_METHOD(bool, ProcessFoo, (std::unique_ptr<Foo> foo), (override));
+```
+
+In tests, to return a move-only object repeatedly, use lambdas or functors:
+
+```cpp
+EXPECT_CALL(mock, CreateFoo())
+    .WillRepeatedly([]() { return std::make_unique<Foo>(); });
+```
+
+Avoid `Return(std::move(...))` with `WillRepeatedly`, as the value will be moved from only once.
+
+---
+
+## Verifying and Cleaning Up Mocks
+
+GoogleMock automatically verifies expectations on mock objects when their destructors run. You can also explicitly verify and clear expectations and default actions at any point using:
+
+```cpp
+bool success = ::testing::Mock::VerifyAndClearExpectations(&mock_object);
+bool successAndCleared = ::testing::Mock::VerifyAndClear(&mock_object);
+```
+
+Use `Mock::AllowLeak(&mock_object);` to suppress verification and suppress leak errors when intentionally leaking mocks.
+
+---
+
+## Summary
+
+This documentation page provides comprehensive guidance on defining and implementing mock classes and methods using GoogleMock's core facilities. Detailed explanations include:
+
+- The syntax and usage of the `MOCK_METHOD` macro, including handling of C++ qualifiers and complex types.
+- How to set expectations with `EXPECT_CALL` and default behaviors with `ON_CALL`.
+- Best practices in mock class design and qualifiers use.
+- Working with overloaded methods, const and ref-qualified methods.
+- Support for move-only types in mocks.
+- Verification and cleanup of mocks.
+
+Users will find actionable examples and guidance for common usage scenarios, enabling robust test double creation and interaction verification.
+
+---
+
+## Additional Resources
+
+- [GoogleMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html)
+- [Mocking Reference](../api-reference/mocking-api/mock-methods)
+- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)
+- [Expectation Modifiers and Actions](../api-reference/mocking-api/expectations-actions)
+- [Advanced Mocking Techniques](../guides/advanced-usage-and-integration/advanced-mocking)
+- [Writing and Running Your First Test](../../getting-started/configuration-and-first-use/writing-first-test)
+
+---
+
+## See Also
+
+- [`EXPECT_CALL` Reference](../api-reference/mocking-api/expectations-actions)
+- [Matchers Guide](../api-reference/matchers-api/builtin-matchers)
+- [Using Mock Objects in Tests](../guides/core-test-workflows/mocking-intro)
+- [GoogleTest Core API](../api-reference/core-api/test-structure)
+
+---
+
+_This documentation focuses strictly on mocking method and class declaration with GoogleMock macros, supporting user scenarios for designing and using mocks effectively._
